# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/games/: brain_calc.py  brain_even.py  calc.py  even.py  gcd.py  logics.py  prime.py  progression.py
brain_games/logics/: logics.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
