[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["tarvarrs <125196841+tarvarrs@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "brain_games"},
]

[tool.poetry.dependencies]
python = "^3.8.1"
flake8 = {version = "^7.1.1", python = ">=3.8.1,<4.0"}

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.games.brain_even:main"
brain-calc = "brain_games.games.brain_calc:main"
